Added support for logging in with google, facebook and github

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,7 @@
 </head>
 <body>
   <dh-root></dh-root>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://connect.facebook.net/en_US/sdk.js" async defer></script>
 </body>
 </html>
